fix: category controller swagger, additional jwt in header request
