# controllers/bike_controller.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"github.com/gowesmart/api-gowesmart/exceptions"
 	_ "github.com/gowesmart/api-gowesmart/model/web"
 	"github.com/gowesmart/api-gowesmart/model/web/request"
 	_ "github.com/gowesmart/api-gowesmart/model/web/response"
@@ -23,22 +24,25 @@ func NewBikeController(bikeService *services.BikeService) *BikeController {
 }
 
 // CreateBike godoc
-//
-//	@Summary Create a bike
-//	@Description Create a new bike
-//	@Tags Bikes
-//	@Accept json
-//	@Produce json
-//	@Param bike body request.CreateBikeRequest true "Bike body"
-//	@Success 201		{object}	web.WebSuccess[response.BikeResponse]
-//	@Failure 400		{object}	web.WebBadRequestError
-//	@Failure 500		{object}	web.WebInternalServerError
-//	@Router /api/bikes [post]
+// @Summary Create a bike
+// @Description Create a new bike
+// @Tags Bikes
+// @Accept json
+// @Produce json
+// @Param Authorization	header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Param bike body request.CreateBikeRequest true "Bike body"
+// @Success 201	{object} web.WebSuccess[response.BikeResponse]
+// @Failure 400	{object} web.WebBadRequestError
+// @Failure 500	{object} web.WebInternalServerError
+// @Router /api/bikes [post]
 func (controller *BikeController) CreateBike(c *gin.Context) {
 	var bikeReq request.CreateBikeRequest
 
 	err := c.ShouldBindJSON(&bikeReq)
 	utils.PanicIfError(err)
+
+	utils.UserRoleMustAdmin(c)
 
 	res, err := controller.bikeService.CreateBike(c, &bikeReq)
 	utils.PanicIfError(err)
@@ -59,7 +63,7 @@ func (controller *BikeController) CreateBike(c *gin.Context) {
 //	@Failure		400		{object}	web.WebBadRequestError
 //	@Failure		404		{object}	web.WebNotFoundError
 //	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/bikes/{id} [put]
+//	@Router			/api/bikes/{id} [patch]
 func (controller *BikeController) UpdateBike(c *gin.Context) {
 	var bikeReq request.UpdateBikeRequest
 
@@ -135,8 +139,7 @@ func (controller *BikeController) GetBikeByID(c *gin.Context) {
 	idStr := c.Param("id")
 	id, err := strconv.ParseUint(idStr, 10, 32)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
-		return
+		panic(exceptions.NewCustomError(http.StatusBadRequest, "id must be an integer"))
 	}
 
 	res, err := controller.bikeService.GetBikeByID(c, uint(id))
